# cpp-labs

./: README.md  build.yml  sonar-project.properties
.github/workflows/: build.yml
lab1/: CMakeLists.txt  README.md  sonar-project.properties
lab1/.github/workflows/: build.yml
lab1/include/: consts.h  menus.h  my_string.h  program.h  utils.h
lab1/src/: main.cpp  menus.cpp  my_string.cpp  program.cpp  utils.cpp
lab2/: CMakeLists.txt  README.md
lab2/include/: array.h  consts.h  menus.h  program.h  utils.h
lab2/src/: array.cpp  main.cpp  menus.cpp  program.cpp  utils.cpp
lab3/: CMakeLists.txt  README.md
lab3/include/: airplane.h  car.h  consts.h  passenger_carrier.h  program.h  train.h  utils.h
lab3/src/: airplane.cpp  car.cpp  main.cpp  menus.cpp  passenger_carrier.cpp  program.cpp  train.cpp  utils.cpp
lab4/: CMakeLists.txt  README.md
lab4/include/: airplane.h  car.h  cargo_carrier.h  consts.h  menus.h  program.h  train.h  utils.h
lab4/src/: airplane.cpp  car.cpp  cargo_carrier.cpp  menus.cpp  program.cpp  train.cpp  utils.cpp
lab5/: CMakeLists.txt  README.md
lab5/include/: binary_tree.h  menus.h  program.h  tree_node.h  utils.h
lab5/src/: main.cpp  menus.cpp  utils.cpp
lab6/: CMakeLists.txt  README.md
lab6/include/: consts.h  date.h  menu.h  program.h  utils.h
lab6/src/: date.cpp  menu.cpp  program.cpp  utils.cpp
lab7/: CMakeLists.txt  README.md
lab7/include/: automatic_telephone_station.h  city_code.h  city_name.h  consts.h  date.h  my_time.h  phone_number.h  phone_numbers.h  program.h  tariff.h  utils.h
lab7/src/: automatic_telephone_station.cpp  city_code.cpp  city_name.cpp  date.cpp  main.cpp  menu.cpp  my_time.cpp  phone_number.cpp  phone_numbers.cpp  program.cpp  tariff.cpp  utils.cpp
lab8/: CMakeLists.txt  README.md
lab8/include/: algorithm.h  array.h  consts.h  program.h  utils.h
lab8/src/: main.cpp  menus.cpp  utils.cpp
